--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <title>Oud!</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <style type="text/css">
-      body, html, #root {
+      body,
+      html,
+      #root {
         width: 100%;
         height: 100%;
         position: absolute;
@@ -11,6 +14,6 @@
     </style>
   </head>
   <body>
-    <div id="root"/>
+    <div id="root" />
   </body>
 </html>
