--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/oud/manifest.json"><link rel="shortcut icon" href="/oud/favicon.ico"><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><title>React App</title><link href="/oud/static/css/main.9658c02b.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/oud/static/js/main.16a61f6a.js"></script></body></html>
+<!doctype html><html><head><title>Oud!</title><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/><style>body,
+      html,
+      #root {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+      }</style></head><body><div id="root"/><script src="main.js"></script></body></html>
